[package]
name = "simple-gh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = "0.4"
env_logger = { version = "0.10", default-features=false }
yansi = "0.5"
bytes = "1"
byte-unit = { version = "4.0", default-features = false }
mime = "0.3"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.17"
figment = { version = "0.10", features = ["env"] }

[profile.release]
lto = true
opt-level = "z"
strip = true  # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"