[package]
name = "simple-gh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.17"
figment = { version = "0.10", features = ["env"] }
byte-unit = { version = "4.0", default-features = false }
log = "0.4"
env_logger = { version = "0.10", default-features=false }
yansi = "0.5"
