[package]
name = "simple-gh"
version = "0.2.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.17"
figment = { version = "0.10", features = ["env"] }
byte-unit = { version = "4.0", default-features = false }
yansi = "0.5"
mime_guess = "2.0"
async-trait = "0.1"
futures-util = "0.3"
tower = { version = "0.4", features = ["full"] }
serde_urlencoded = "0.7"
pin-project = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "ansi",
], default-features = false }

[profile.release]
lto = true
opt-level = "z"
strip = true      # Automatically strip symbols from the binary.
codegen-units = 1
panic = "abort"
